--- a/.github/workflows/master_ilumine-ci.yml
+++ b/.github/workflows/master_ilumine-ci.yml
@@ -14,18 +14,17 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@master
 
       - name: Set up Node.js version
         uses: actions/setup-node@v1
         with:
           node-version: '12.x'
 
-      - name: npm install, build, and test
+      - name: npm install, build
         run: |
           npm install
           npm run build --if-present
-          npm run test --if-present
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v2
